docs-archive/apache-airflow-providers-microsoft-azure/3.5.0/_sources/_api/airflow/providers/microsoft/azure/operators/adx/index.rst.txt
:py:mod:`airflow.providers.microsoft.azure.operators.adx`
=========================================================

.. py:module:: airflow.providers.microsoft.azure.operators.adx

.. autoapi-nested-parse::

   This module contains Azure Data Explorer operators



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.microsoft.azure.operators.adx.AzureDataExplorerQueryOperator




.. py:class:: AzureDataExplorerQueryOperator(*, query: str, database: str, options: Optional[dict] = None, azure_data_explorer_conn_id: str = 'azure_data_explorer_default', **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   Operator for querying Azure Data Explorer (Kusto).

   :param query: KQL query to run (templated).
   :type query: str
   :param database: Database to run the query on (templated).
   :type database: str
   :param options: Optional query options. See:
     https://docs.microsoft.com/en-us/azure/kusto/api/netfx/request-properties#list-of-clientrequestproperties
   :type options: dict
   :param azure_data_explorer_conn_id: Reference to the
       :ref:`Azure Data Explorer connection<howto/connection:adx>`.
   :type azure_data_explorer_conn_id: str

   .. py:attribute:: ui_color
      :annotation: = #00a1f2

      

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['query', 'database']

      

   .. py:attribute:: template_ext
      :annotation: :Sequence[str] = ['.kql']

      

   .. py:method:: get_hook(self) -> airflow.providers.microsoft.azure.hooks.adx.AzureDataExplorerHook

      Returns new instance of AzureDataExplorerHook


   .. py:method:: execute(self, context: airflow.utils.context.Context) -> Union[azure.kusto.data._models.KustoResultTable, str]

      Run KQL Query on Azure Data Explorer (Kusto).
      Returns `PrimaryResult` of Query v2 HTTP response contents
      (https://docs.microsoft.com/en-us/azure/kusto/api/rest/response2)



